--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,12 @@
 
 services:
-  - type: web
-    name: telegram-render-bot
-    env: python
+  - type: worker
+    name: btc-callput-bot
+    runtime: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python main.py"
     envVars:
       - key: TELEGRAM_TOKEN
-        value: your_telegram_bot_token_here
+        sync: false
+      - key: CHAT_ID
+        sync: false
